// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Text component resized 1`] = `
<div
  className=""
>
  🥑
</div>
`;

exports[`A Text component transformed 1`] = `
<div
  className=""
>
  🥑
</div>
`;

exports[`A Text component tuncated 1`] = `
<div
  className="undefined"
>
  🥑
</div>
`;

exports[`A Text component weight 1`] = `
<div
  className=""
>
  🥑
</div>
`;

exports[`A Text component with mode 1`] = `
<div
  className=""
>
  🥑
</div>
`;

exports[`A code Text component 1`] = `
<code
  className=""
>
  🥑
</code>
`;

exports[`A default Text component 1`] = `
<div
  className=""
>
  🥑
</div>
`;

exports[`A span Text component 1`] = `
<span
  className=""
>
  🥑
</span>
`;
